--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,23 @@
         <span class="site-description">{{site.user_job_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="E-Mail" href="mailto:mail[at]dominikhaitz.de"><i class="icon fas fa-envelope"></i></a>
-        <a rel="me" aria-label="Github" target="_blank" href="https://github.com/dhaitz"><i class="icon fab fa-github" aria-hidden="true"></i></a>
-        <a rel="me" aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/dominik-haitz"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
-        <a rel="me" aria-label="XING" target="_blank" href="https://xing.to/dhaitz"><i class="icon fab fa-xing" aria-hidden="true"></i></a>
-        <a rel="me" aria-label="Medium" target="_blank" href="https://towardsdatascience.com/@d_haitz"><i class="icon fab fa-medium" aria-hidden="true"></i></a>
+        <a aria-label="E-Mail" href="mailto:jonalbo311@gmail.com"><i class="icon fas fa-envelope"></i></a>
+        <a rel="me" aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/jonalbo"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
         </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About</a>
         ·
         <a class="link" href="#projects" data-scroll>Projects</a>
+        ·
+        <a class="link" href="https://www.jonalbo.com/JonAlbo_Resume.pdf">Resume</a>
+        ·
+        <a class="link" href="https://patents.google.com/?inventor=Jon+ALBO">Patents</a>
+        ·
+        <a class="link" href="https://scholar.google.com/citations?user=0ug4j68AAAAJ">Publications</a>
+        ·
+        <a class="link" href="https://www.jonalbo.com/news.html">In the News</a>
+        ·
+        <a class="link" href="https://www.jonalbo.com/photography.html">Photography</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
