--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <p>&copy; {{site.username}} {{ 'now' | date: "%Y" }}</p>
+    <p>&copy; Jon Albo {{ 'now' | date: "%Y" }}</p>
     <p>Built with Jekyll and the <a href="https://github.com/nrandecker/particle">particle</a> template by <a href="https://github.com/nrandecker">Nathan Randecker</a></p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
