--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 <div id="particles-js">
+  
   <div class="header">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+
       <h1>
         <span class="site-title">{{site.user_title}} {{site.username}}</span>
         <span class="site-description">{{site.user_job_title}}</span>
