--- a/_includes/inthenews.html
+++ b/_includes/inthenews.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155321064-1"></script>
 <script>
