--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,8 @@
 
 
 <div class="user-projects">
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+
   <div class="images-left">
     <img alt="wrting" src="{{ "/assets/img/kaitlyn-baker-vZJdYl5JVXY-unsplash.jpg" | prepend: site.baseurl }}" />
   </div>
