--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <footer class="footer">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+
     <p>&copy; Jon Albo {{ 'now' | date: "%Y" }}</p>
     <p>Built with Jekyll and the <a href="https://github.com/nrandecker/particle">particle</a> template by <a href="https://github.com/nrandecker">Nathan Randecker</a></p>
 </footer>
