--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
         ·
         <a class="link" href="https://scholar.google.com/citations?user=0ug4j68AAAAJ">Publications</a>
         ·
-        <a class="link" href="https://www.jonalbo.com/news.html">In the News</a>
+        <a class="link" href="https://www.jonalbo.com/particle_site/news">In the News</a>
         ·
         <a class="link" href="https://www.jonalbo.com/photography.html">Photography</a>
       </div>
