--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,9 @@
         <a rel="me" aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/jonalbo"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
         </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About</a>
+        <a class="link" href="https://www.jonalbo.com/particle_site/#about" data-scroll>About</a>
         ·
-        <a class="link" href="#projects" data-scroll>Projects</a>
+        <a class="link" href="https://www.jonalbo.com/particle_site/#projects" data-scroll>Projects</a>
         ·
         <a class="link" href="https://www.jonalbo.com/JonAlbo_Resume.pdf">Resume</a>
         ·
