--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
         ·
         <a class="link" href="https://www.jonalbo.com/particle_site/news">In the News</a>
         ·
-        <a class="link" href="https://www.jonalbo.com/photography.html">Photography</a>
+        <a class="link" href="https://www.jonalbo.com/particle_site/photography">Photography</a>
       </div>
   </div>
   <a class="down" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
