--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -1,108 +1,51 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155321064-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-155321064-1');
-</script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Photography | Jonathan Albo</title>
-    <meta name="description" content="Jonathan Albo enjoys photographing people, animals, and scenic views in his free time. Check out some of his work!"/>
-    <meta name="keywords" content="Jonathan Albo,Jon Albo,Jonathan Eric Albo,Jonathan Albo publications,Jon Albo publications,Jonathan Albo google scholar,Jon Albo google scholar,Jonathan Albo CV,Jonathan Albo resume,Jon Albo CV, Jon Albo resume,Jonathan Albo photography,Jon Albo photography,Jonathan Albo contact,Jon Albo contact"/>
-    <meta http-equiv="content-language" content="en-us">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/android-chrome-512x512.png">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css">
-    <link rel="stylesheet" href="assets/css/untitled-1.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photography | Jonathan Albo</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+  <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css">
+  <style>
+    body {
+      background-color: #2c2c2c;
+      color: #fff;
+    }
+    .photo-gallery {
+      padding: 50px 0;
+    }
+    .photo-gallery .item {
+      margin-bottom: 30px;
+    }
+    .photo-gallery img {
+      border-radius: 5px;
+      transition: transform 0.2s;
+      width: 100%;
+      display: block;
+    }
+    .photo-gallery img:hover {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
+<body>
 
-    <div class="photo-gallery" style="background-repeat: no-repeat;background-size: cover;padding: 0px 0px 0px;background-color: rgb(44,44,44);">
-        <div class="container" style="padding: 0px 0px 0px;">
-            <div class="intro">
-                <p class="text-center"></p>
-            </div>
-            <!--
-            <h2 class="text-center" style="font-size: 42px;padding: 0px;color: rgb(255,255,255);"><strong>Engineer by day, photographer by attempt</strong></h2>
-            -->
-            <div class="row photos">
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%201.jpg"><img class="img-fluid" src="assets/img/File%201.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%202.jpg"><img class="img-fluid" src="assets/img/File%202.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%203.jpg"><img class="img-fluid" src="assets/img/File%203.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%204.jpg"><img class="img-fluid" src="assets/img/File%204.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%205.jpg"><img class="img-fluid" src="assets/img/File%205.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%206.jpg"><img class="img-fluid" src="assets/img/File%206.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%207.jpg"><img class="img-fluid" src="assets/img/File%207.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%208.jpg"><img class="img-fluid" src="assets/img/File%208.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a class="text-center" data-lightbox="photos" href="assets/img/File%209.jpg"><img class="img-fluid" src="assets/img/File%209.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2010.jpg"><img class="img-fluid" src="assets/img/File%2010.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2011.jpg"><img class="img-fluid" src="assets/img/File%2011.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2012.jpg"><img class="img-fluid" src="assets/img/File%2012.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2013.jpg"><img class="img-fluid" src="assets/img/File%2013.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2014.jpg"><img class="img-fluid" src="assets/img/File%2014.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2015.jpg"><img class="img-fluid" src="assets/img/File%2015.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2016.jpg"><img class="img-fluid" src="assets/img/File%2016.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2017.jpg"><img class="img-fluid" src="assets/img/File%2017.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2018.jpg"><img class="img-fluid" src="assets/img/File%2018.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2019.jpg"><img class="img-fluid" src="assets/img/File%2019.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2020.jpg"><img class="img-fluid" src="assets/img/File%2020.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2021.jpg"><img class="img-fluid" src="assets/img/File%2021.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2022.jpg"><img class="img-fluid" src="assets/img/File%2022.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2023.jpg"><img class="img-fluid" src="assets/img/File%2023.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2024.jpg"><img class="img-fluid" src="assets/img/File%2024.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2025.jpg"><img class="img-fluid" src="assets/img/File%2025.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2026.jpg"><img class="img-fluid" src="assets/img/File%2026.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2027.jpg"><img class="img-fluid" src="assets/img/File%2027.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2028.jpg"><img class="img-fluid" src="assets/img/File%2028.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2029.jpg"><img class="img-fluid" src="assets/img/File%2029.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2030.jpg"><img class="img-fluid" src="assets/img/File%2030.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2031.jpg"><img class="img-fluid" src="assets/img/File%2031.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2032.jpg"><img class="img-fluid" src="assets/img/File%2032.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2033.jpg"><img class="img-fluid" src="assets/img/File%2033.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2034.jpg"><img class="img-fluid" src="assets/img/File%2034.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2035.jpg"><img class="img-fluid" src="assets/img/File%2035.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2036.jpg"><img class="img-fluid" src="assets/img/File%2036.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2037.jpg"><img class="img-fluid" src="assets/img/File%2037.jpg"></a></div>                
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2038.jpg"><img class="img-fluid" src="assets/img/File%2038.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2039.jpg"><img class="img-fluid" src="assets/img/File%2039.jpg"></a></div>    
-                
-                <!--
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><p class="text-center" style="color: rgb(255,255,255);font-size: 40px; "><strong>More images</strong><code></code><strong> </strong><a href="https://photos.app.goo.gl/QXZ5CP1bgi8ihDxG6" style="color: rgb(255,255,255)" target="_blank"><u><strong>here</u><strong></a></div>
-                -->      
-                    
-    
-    </p>
-                </div>
-            </div>
-        </div>
+<div class="photo-gallery">
+  <div class="container">
+    <div class="row">
+      <!-- Replace the filenames below with your actual images -->
+      <div class="col-sm-6 col-md-4 col-lg-3 item">
+        <a data-lightbox="photos" href="assets/img/File%201.jpg">
+          <img src="assets/img/File%201.jpg" alt="Photo 1">
+        </a>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item">
+        <a data-lightbox="photos" href="assets/img/File%202.jpg">
+          <img src="assets/img/File%202.jpg" alt="Photo 2">
+        </a>
+      </div>
+      <!-- Repeat for all images -->
     </div>
-    <footer class="page-footer">
-        <div><a href="mailto:jonalbo311@gmail.com"><i class="fas fa-envelope" style="padding: 10px;font-size: 40px;color: rgb(64,66,67);padding-top: 0px;"></i></a><a href="http://linkedin.com/in/jonalbo" target="_blank"><i class="fab fa-linkedin" style="padding: 10px;font-size: 40px;color: rgb(64,66,67);padding-top: 0px;"></i></a>
-        </div>
-    </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/theme.js"></script>
-</body>
-
-</html>
+  </div>
+</div>
