--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -39,16 +39,16 @@
 <div class="photo-gallery">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%201.jpg"><img src="assets/img/File%201.jpg" alt="Photo 1"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%202.jpg"><img src="assets/img/File%202.jpg" alt="Photo 2"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%203.jpg"><img src="assets/img/File%203.jpg" alt="Photo 3"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%204.jpg"><img src="assets/img/File%204.jpg" alt="Photo 4"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%205.jpg"><img src="assets/img/File%205.jpg" alt="Photo 5"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%206.jpg"><img src="assets/img/File%206.jpg" alt="Photo 6"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%207.jpg"><img src="assets/img/File%207.jpg" alt="Photo 7"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%208.jpg"><img src="assets/img/File%208.jpg" alt="Photo 8"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%209.jpg"><img src="assets/img/File%209.jpg" alt="Photo 9"></a></div>
-      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2010.jpg"><img src="assets/img/File%2010.jpg" alt="Photo 10"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%201.jpg"><img src="/particle_site/assets/img/File%201.jpg" alt="Photo 1"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%202.jpg"><img src="/particle_site/assets/img/File%202.jpg" alt="Photo 2"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%203.jpg"><img src="/particle_site/assets/img/File%203.jpg" alt="Photo 3"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%204.jpg"><img src="/particle_site/assets/img/File%204.jpg" alt="Photo 4"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%205.jpg"><img src="/particle_site/assets/img/File%205.jpg" alt="Photo 5"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%206.jpg"><img src="/particle_site/assets/img/File%206.jpg" alt="Photo 6"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%207.jpg"><img src="/particle_site/assets/img/File%207.jpg" alt="Photo 7"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%208.jpg"><img src="/particle_site/assets/img/File%208.jpg" alt="Photo 8"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%209.jpg"><img src="/particle_site/assets/img/File%209.jpg" alt="Photo 9"></a></div>
+      <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="/particle_site/assets/img/File%2010.jpg"><img src="/particle_site/assets/img/File%2010.jpg" alt="Photo 10"></a></div>
       <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2011.jpg"><img src="assets/img/File%2011.jpg" alt="Photo 11"></a></div>
       <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2012.jpg"><img src="assets/img/File%2012.jpg" alt="Photo 12"></a></div>
       <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/File%2013.jpg"><img src="assets/img/File%2013.jpg" alt="Photo 13"></a></div>
